#22 [feature] : location, camera permission request at launch
tedpermisson 라이브러리 사용 권한 체크
manifest에 명시적 권한 부여
필요한 string resource 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
 
     implementation 'androidx.datastore:datastore-preferences:1.0.0' // DataStore
+
+    // TedPermission
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 }
