#15 [ui/ux] : develop LoginActivity view XML
로그인 액티비티 뷰 xml 작성
google signin dependency 추가
google signin button 스타일 지정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
 
     // TedPermission
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+
+    // Google SignIn
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
 }
