--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
+.idea/git_toolbox_prj.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -63,6 +64,7 @@ captures/
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
+app/src/main/res/values/app_keys.xml
 
 # Freeline
 freeline.py
