--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
 
     // Google SignIn
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
+    // Retrofit2, Gson
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
