--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".AlBangApplication"
         android:allowBackup="true"
@@ -14,9 +16,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AlBang">
         <activity
-            android:name=".LaunchActivity"
+            android:name=".view.LaunchActivity"
             android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
@@ -25,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".view.LoginActivity" />
     </application>
 
 </manifest>
