#42 [ui/ux] : Main Activity xml view 수정
북마크 액티비티 전환을 위한 버튼 추가
필요 resource 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
         <activity android:name=".view.LoginActivity" />
-        <activity android:name=".ReviewActivity"/>
-      
+        <activity android:name=".ReviewActivity" />
+        <activity android:name=".TestActivity" />
+
         <meta-data android:name="com.naver.maps.map.CLIENT_ID"
             android:value="@string/naver_client_id" />
-            
+
     </application>
 
 </manifest>
