--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
 
     // Google Play Service OpenSource Licenses
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
