--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28"/>
+
     <application
         android:name=".AlBangApplication"
         android:allowBackup="true"
@@ -39,6 +42,18 @@
 
         <meta-data android:name="com.naver.maps.map.CLIENT_ID"
             android:value="@string/naver_client_id" />
+
+        <provider
+            android:authorities="com.pns.albang"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths">
+
+            </meta-data>
+        </provider>
 
     </application>
 
