--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,9 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    // AR
+    implementation 'com.google.ar:core:1.28.0'
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.15.0'
+
 }
