--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".view.ReviewActivity" />
         <activity android:name=".view.MyPageActivity" />
         <activity android:name=".view.MyGuestbookActivity" />
+        <activity android:name=".view.ARReviewActivity" />
         <activity android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
             android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
         <activity android:name=".TestActivity" />
